--- a/src/components/sections-input/contactForm/_contactForm.scss
+++ b/src/components/sections-input/contactForm/_contactForm.scss
@@ -9,7 +9,7 @@ section.contact-form {
 
             fieldset {
                 display: flex;
-                gap: 1rem;
+                gap: .8rem;
                 flex-direction: column;
                 align-items: center;
 
@@ -23,10 +23,50 @@ section.contact-form {
                 label, input, textarea, button {
                     width: 100%;
                 }
+                
+                label {
+                    display: flex;
+                    flex-direction: column;
+
+                    .icon {
+                        height: calc(100% - 1rem);
+                    }
+
+                    &.error {
+                                                
+                        input::placeholder, textarea::placeholder { color: $invalid; }
+                        input, textarea { 
+                            border-color: $invalid;
+                            box-shadow: -1px -1px 2px inset $invalid;
+                            & + .icon::after {
+                                content: "\f057";
+                                color: $invalid; 
+                            }
+                        }
+                        
+                        input:focus::placeholder, textarea:focus::placeholder { color: transparent }
+
+                    }
+
+                    &.shake {
+                        animation: horizontal-shaking .3s linear 1 alternate;
+                    }
+
+                    .error-text {
+                        width: 100%;
+                        height: .8rem;
+                        text-align: right;
+                        padding-right: 1rem;
+                        margin-top: .2rem;
+                        color: $invalid;  
+                        font-size: .8rem;
+                        font-weight: 600;
+                    }
+                }
 
                 button {
                     padding: 1rem 2rem;
-                    margin-top: 2rem;
+                    margin-top: 1rem;
                 }
             }
         }
@@ -72,7 +112,11 @@ section.contact-form {
 
 @media (max-width: 576px) { 
     /* SECTION FORM 576 */
-    section.contact-form.form {
+    section.contact-form .container #contact-form {
         padding-bottom: 3rem;
+
+        fieldset label .icon.top {
+            height: auto;
+        }
     }
 }
