experimented unsuccessfully with useContext, made userCreated confirmation prettier

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -212,6 +212,14 @@ form {
     100% { transform: translateX(0) }
 }
 
+/* Fade away*/
+@keyframes fade-away {
+    0% { opacity: 1 }
+    66% { opacity: 1 }
+    100% { opacity: 0 }
+}
+
+
 /* MEDIA QUERIES */
 @media (max-width: 1520px) {
     /* GLOBAL */
