--- a/src/components/sections-input/contactForm/_contactForm.scss
+++ b/src/components/sections-input/contactForm/_contactForm.scss
@@ -68,6 +68,26 @@ section.contact-form {
                     padding: 1rem 2rem;
                     margin-top: 1rem;
                 }
+
+                .btn-text {
+                    display: inline;
+                    width: 100%;
+                    height: .8rem;
+                    text-align: right;
+                    padding-right: 1rem;
+                    margin-top: .2rem;
+                    color: $valid;  
+                    font-size: .8rem;
+                    font-weight: 600;
+
+                    &.active {
+                        animation-name: fade-away;
+                        animation-duration: 3s; 
+                        animation-timing-function: ease-in-out;
+                        animation-iteration-count: 1;
+                        animation-fill-mode: forwards;
+                    }
+                }
             }
         }
     }    
