--- a/src/css/global.css
+++ b/src/css/global.css
@@ -327,6 +327,18 @@ form fieldset label .icon.top {
     transform: translateX(0);
   }
 }
+/* Fade away*/
+@keyframes fade-away {
+  0% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 /* MEDIA QUERIES */
 @media (max-width: 1520px) {
   /* GLOBAL */
@@ -1875,6 +1887,24 @@ section.contact-form .container form fieldset label .error-text {
 section.contact-form .container form fieldset button {
   padding: 1rem 2rem;
   margin-top: 1rem;
+}
+section.contact-form .container form fieldset .btn-text {
+  display: inline;
+  width: 100%;
+  height: 0.8rem;
+  text-align: right;
+  padding-right: 1rem;
+  margin-top: 0.2rem;
+  color: green;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+section.contact-form .container form fieldset .btn-text.active {
+  animation-name: fade-away;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 @media (max-width: 1520px) {
