added Context to contactForm and added feed-like functionality to logoBar and team

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -17,7 +17,8 @@
 .article-grid.cards a.card .image-wrapper img {
   width: 100%;
   max-height: 280px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   aspect-ratio: 3/2;
 }
 .article-grid.cards a.card .image-wrapper .date-box {
@@ -261,8 +262,14 @@ form fieldset label input, form fieldset label textarea {
 form fieldset label input:hover, form fieldset label input:focus, form fieldset label textarea:hover, form fieldset label textarea:focus {
   border: 1px solid #191919;
 }
+form fieldset label input::-moz-placeholder, form fieldset label textarea::-moz-placeholder {
+  color: #84848a;
+}
 form fieldset label input::placeholder, form fieldset label textarea::placeholder {
   color: #84848a;
+}
+form fieldset label input:focus::-moz-placeholder, form fieldset label textarea:focus::-moz-placeholder {
+  color: transparent;
 }
 form fieldset label input:focus::placeholder, form fieldset label textarea:focus::placeholder {
   color: transparent;
@@ -465,7 +472,8 @@ footer section.top .lines {
 footer section.top .container {
   display: grid;
   grid-template-areas: "f-1 f-1 f-2 f-3 f-4 f-5";
-  column-gap: 7rem;
+  -moz-column-gap: 7rem;
+       column-gap: 7rem;
 }
 footer section.top .f {
   display: flex;
@@ -566,7 +574,6 @@ footer section.bottom .social a {
 @media (max-width: 992px) {
   /* HEADER 992 */
   header {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
@@ -620,7 +627,8 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    column-gap: 0rem;
+    -moz-column-gap: 0rem;
+         column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -691,7 +699,8 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    column-gap: 0rem;
+    -moz-column-gap: 0rem;
+         column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -764,7 +773,8 @@ section.about .container .row .left {
 section.about .container .row .left .image-wrapper .image {
   height: 700px;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   padding-left: 3rem;
 }
 section.about .container .row .left .image-wrapper .lines {
@@ -1187,7 +1197,8 @@ section.project-case .objects a.object *, section.project-case .objects a.object
 section.project-case .objects a.object img {
   width: 100%;
   height: 350px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   display: block;
 }
 section.project-case .objects a.object h3 {
@@ -1308,6 +1319,7 @@ section.service .cards .card.flipped:hover i, section.service .cards .card.flipp
   color: #ffffff;
 }
 section.service .btngroup .btn {
+  width: -moz-fit-content;
   width: fit-content;
 }
 section.service .lines {
@@ -1353,7 +1365,8 @@ section.team .cards .card {
 }
 section.team .cards .card img {
   height: 460px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 section.team .cards .card .text {
   margin-top: 2rem;
@@ -1385,7 +1398,8 @@ section.team .cards .card .text {
   }
   section.team .container .cards .card img {
     height: 345px;
-    object-position: auto 20%;
+    -o-object-position: auto 20%;
+       object-position: auto 20%;
   }
 }
 section.testimonials {
@@ -1421,7 +1435,8 @@ section.testimonials .container .cards .card .person img {
   height: 5rem;
   width: 5rem;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 section.testimonials .container .cards .card .person .text h3, section.testimonials .container .cards .card .person .text p {
   margin: 0;
@@ -1550,7 +1565,8 @@ section.why-us .right .image-wrapper img {
   width: 700px;
   height: 550px;
   float: right;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: relative;
   z-index: 5;
 }
@@ -1631,8 +1647,14 @@ section.article-news .container .article-main .sidebar .search-field {
   padding: 1rem 2rem;
   border-radius: 25px;
 }
+section.article-news .container .article-main .sidebar .search-field input#news-search::-moz-placeholder {
+  color: #84848a;
+}
 section.article-news .container .article-main .sidebar .search-field input#news-search::placeholder {
   color: #84848a;
+}
+section.article-news .container .article-main .sidebar .search-field input#news-search:focus::-moz-placeholder {
+  color: transparent;
 }
 section.article-news .container .article-main .sidebar .search-field input#news-search:focus::placeholder {
   color: transparent;
@@ -1693,7 +1715,8 @@ section.article-news .container .article-main .sidebar .categories div:hover {
   }
   section.article-news .container .article-main img {
     width: 100%;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   section.article-news .container .article-main .sidebar {
     display: none;
@@ -1857,16 +1880,21 @@ section.contact-form .container form fieldset label {
 section.contact-form .container form fieldset label .icon {
   height: calc(100% - 1rem);
 }
+section.contact-form .container form fieldset label.error input::-moz-placeholder, section.contact-form .container form fieldset label.error textarea::-moz-placeholder {
+  color: red;
+}
 section.contact-form .container form fieldset label.error input::placeholder, section.contact-form .container form fieldset label.error textarea::placeholder {
   color: red;
 }
 section.contact-form .container form fieldset label.error input, section.contact-form .container form fieldset label.error textarea {
   border-color: red;
-  box-shadow: -1px -1px 2px inset red;
 }
 section.contact-form .container form fieldset label.error input + .icon::after, section.contact-form .container form fieldset label.error textarea + .icon::after {
   content: "\f057";
   color: red;
+}
+section.contact-form .container form fieldset label.error input:focus::-moz-placeholder, section.contact-form .container form fieldset label.error textarea:focus::-moz-placeholder {
+  color: transparent;
 }
 section.contact-form .container form fieldset label.error input:focus::placeholder, section.contact-form .container form fieldset label.error textarea:focus::placeholder {
   color: transparent;
