--- a/src/components/sections-info/articleNews/_articleNews.scss
+++ b/src/components/sections-info/articleNews/_articleNews.scss
@@ -104,9 +104,8 @@ section.article-news {
                     }
                 }
 
-                .recent-posts {
-                
-                    div div {
+                .recent-posts div div {
+                    a {
                         cursor: pointer;
 
                         h4 {
@@ -119,15 +118,15 @@ section.article-news {
                             }
                         }
                     }
-                    
 
-                    .line {
+                    div.line {
                         height: 1px;
                         width: 100%;
                         background-color: $bg-color;
                         margin: 1rem 0;
-                   }
+                    }     
                 }
+                
 
                 .categories div {
                     font-weight: 600;
