--- a/src/css/global.css
+++ b/src/css/global.css
@@ -17,8 +17,7 @@
 .article-grid.cards a.card .image-wrapper img {
   width: 100%;
   max-height: 280px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   aspect-ratio: 3/2;
 }
 .article-grid.cards a.card .image-wrapper .date-box {
@@ -262,14 +261,8 @@ form fieldset label input, form fieldset label textarea {
 form fieldset label input:hover, form fieldset label input:focus, form fieldset label textarea:hover, form fieldset label textarea:focus {
   border: 1px solid #191919;
 }
-form fieldset label input::-moz-placeholder, form fieldset label textarea::-moz-placeholder {
-  color: #84848a;
-}
 form fieldset label input::placeholder, form fieldset label textarea::placeholder {
   color: #84848a;
-}
-form fieldset label input:focus::-moz-placeholder, form fieldset label textarea:focus::-moz-placeholder {
-  color: transparent;
 }
 form fieldset label input:focus::placeholder, form fieldset label textarea:focus::placeholder {
   color: transparent;
@@ -334,16 +327,21 @@ form fieldset label .icon.top {
     transform: translateX(0);
   }
 }
-/* Fade away*/
-@keyframes fade-away {
+/* Message-sent-btn-text */
+@keyframes message-sent-btn-text {
   0% {
+    opacity: 0;
+  }
+  33% {
     opacity: 1;
   }
   66% {
     opacity: 1;
+    margin-left: 93%;
   }
   100% {
     opacity: 0;
+    margin-left: 93%;
   }
 }
 /* MEDIA QUERIES */
@@ -472,8 +470,7 @@ footer section.top .lines {
 footer section.top .container {
   display: grid;
   grid-template-areas: "f-1 f-1 f-2 f-3 f-4 f-5";
-  -moz-column-gap: 7rem;
-       column-gap: 7rem;
+  column-gap: 7rem;
 }
 footer section.top .f {
   display: flex;
@@ -574,6 +571,7 @@ footer section.bottom .social a {
 @media (max-width: 992px) {
   /* HEADER 992 */
   header {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
@@ -627,8 +625,7 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    -moz-column-gap: 0rem;
-         column-gap: 0rem;
+    column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -699,8 +696,7 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    -moz-column-gap: 0rem;
-         column-gap: 0rem;
+    column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -773,8 +769,7 @@ section.about .container .row .left {
 section.about .container .row .left .image-wrapper .image {
   height: 700px;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   padding-left: 3rem;
 }
 section.about .container .row .left .image-wrapper .lines {
@@ -1197,8 +1192,7 @@ section.project-case .objects a.object *, section.project-case .objects a.object
 section.project-case .objects a.object img {
   width: 100%;
   height: 350px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 section.project-case .objects a.object h3 {
@@ -1319,7 +1313,6 @@ section.service .cards .card.flipped:hover i, section.service .cards .card.flipp
   color: #ffffff;
 }
 section.service .btngroup .btn {
-  width: -moz-fit-content;
   width: fit-content;
 }
 section.service .lines {
@@ -1365,8 +1358,7 @@ section.team .cards .card {
 }
 section.team .cards .card img {
   height: 460px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 section.team .cards .card .text {
   margin-top: 2rem;
@@ -1398,8 +1390,7 @@ section.team .cards .card .text {
   }
   section.team .container .cards .card img {
     height: 345px;
-    -o-object-position: auto 20%;
-       object-position: auto 20%;
+    object-position: auto 20%;
   }
 }
 section.testimonials {
@@ -1435,8 +1426,7 @@ section.testimonials .container .cards .card .person img {
   height: 5rem;
   width: 5rem;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 section.testimonials .container .cards .card .person .text h3, section.testimonials .container .cards .card .person .text p {
   margin: 0;
@@ -1565,8 +1555,7 @@ section.why-us .right .image-wrapper img {
   width: 700px;
   height: 550px;
   float: right;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   position: relative;
   z-index: 5;
 }
@@ -1647,14 +1636,8 @@ section.article-news .container .article-main .sidebar .search-field {
   padding: 1rem 2rem;
   border-radius: 25px;
 }
-section.article-news .container .article-main .sidebar .search-field input#news-search::-moz-placeholder {
-  color: #84848a;
-}
 section.article-news .container .article-main .sidebar .search-field input#news-search::placeholder {
   color: #84848a;
-}
-section.article-news .container .article-main .sidebar .search-field input#news-search:focus::-moz-placeholder {
-  color: transparent;
 }
 section.article-news .container .article-main .sidebar .search-field input#news-search:focus::placeholder {
   color: transparent;
@@ -1678,16 +1661,16 @@ section.article-news .container .article-main .sidebar .recent-posts h3::after, 
 section.article-news .container .article-main .sidebar .recent-posts p, section.article-news .container .article-main .sidebar .recent-posts div, section.article-news .container .article-main .sidebar .categories p, section.article-news .container .article-main .sidebar .categories div {
   color: #84848a;
 }
-section.article-news .container .article-main .sidebar .recent-posts div div {
+section.article-news .container .article-main .sidebar .recent-posts div div a {
   cursor: pointer;
 }
-section.article-news .container .article-main .sidebar .recent-posts div div h4 {
+section.article-news .container .article-main .sidebar .recent-posts div div a h4 {
   font-size: 1.1rem;
 }
-section.article-news .container .article-main .sidebar .recent-posts div div:hover h4, section.article-news .container .article-main .sidebar .recent-posts div div:hover p {
+section.article-news .container .article-main .sidebar .recent-posts div div a:hover h4, section.article-news .container .article-main .sidebar .recent-posts div div a:hover p {
   text-decoration: underline;
 }
-section.article-news .container .article-main .sidebar .recent-posts .line {
+section.article-news .container .article-main .sidebar .recent-posts div div div.line {
   height: 1px;
   width: 100%;
   background-color: #f0efe9;
@@ -1715,8 +1698,7 @@ section.article-news .container .article-main .sidebar .categories div:hover {
   }
   section.article-news .container .article-main img {
     width: 100%;
-    -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
   }
   section.article-news .container .article-main .sidebar {
     display: none;
@@ -1880,9 +1862,6 @@ section.contact-form .container form fieldset label {
 section.contact-form .container form fieldset label .icon {
   height: calc(100% - 1rem);
 }
-section.contact-form .container form fieldset label.error input::-moz-placeholder, section.contact-form .container form fieldset label.error textarea::-moz-placeholder {
-  color: red;
-}
 section.contact-form .container form fieldset label.error input::placeholder, section.contact-form .container form fieldset label.error textarea::placeholder {
   color: red;
 }
@@ -1892,9 +1871,6 @@ section.contact-form .container form fieldset label.error input, section.contact
 section.contact-form .container form fieldset label.error input + .icon::after, section.contact-form .container form fieldset label.error textarea + .icon::after {
   content: "\f057";
   color: red;
-}
-section.contact-form .container form fieldset label.error input:focus::-moz-placeholder, section.contact-form .container form fieldset label.error textarea:focus::-moz-placeholder {
-  color: transparent;
 }
 section.contact-form .container form fieldset label.error input:focus::placeholder, section.contact-form .container form fieldset label.error textarea:focus::placeholder {
   color: transparent;
@@ -1917,19 +1893,19 @@ section.contact-form .container form fieldset button {
   margin-top: 1rem;
 }
 section.contact-form .container form fieldset .btn-text {
-  display: inline;
-  width: 100%;
+  display: block;
+  align-self: flex-start;
   height: 0.8rem;
-  text-align: right;
   padding-right: 1rem;
   margin-top: 0.2rem;
   color: green;
   font-size: 0.8rem;
   font-weight: 600;
+  text-wrap: nowrap;
 }
 section.contact-form .container form fieldset .btn-text.active {
-  animation-name: fade-away;
-  animation-duration: 3s;
+  animation-name: message-sent-btn-text;
+  animation-duration: 5s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
